bunch of link updates

--- a/src/config/firefox/package.json
+++ b/src/config/firefox/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "octotree",
-  "title": "Octotree",
+  "name": "octoprime",
+  "title": "Octoprime",
   "id": "jid1-Om7eJGwA1U8Akg@jetpack",
-  "description": "Code tree for GitHub",
-  "author": "Buu Nguyen",
-  "homepage": "https://github.com/buunguyen/octotree",
+  "description": "Super addon for GitHub",
+  "author": "Adhityan",
+  "homepage": "https://github.com/adhityan/octotree",
   "main": "lib/firefox",
   "icon": "resource://jid1-Om7eJGwA1U8Akg-at-jetpack/data/icons/icon48.png",
   "icon64": "resource://jid1-Om7eJGwA1U8Akg-at-jetpack/data/icons/icon64.png",
