--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "octotree",
   "version": "2.1.0",
-  "description": "Code tree for GitHub",
+  "description": "Super addon for GitHub",
   "main": "inject.js",
   "scripts": {
     "build": "gulp",
