--- a/src/config/chrome/manifest.json
+++ b/src/config/chrome/manifest.json
@@ -6,10 +6,22 @@
   "description": "Super addon for GitHub",
   "homepage_url": "https://github.com/adhityan/octotree",
   "icons": {
+    "16": "icons/icon128.png",
+    "19": "icons/icon19.png",
+    "48": "icons/icon48.png",
+    "64": "icons/icon64.png",
     "128": "icons/icon128.png"
   },
+  "browser_action": {
+    "default_icon": {
+      "16": "icons/icon128.png",
+      "19": "icons/icon19.png",
+      "48": "icons/icon48.png",
+      "64": "icons/icon64.png",
+      "128": "icons/icon128.png"
+    }
+  },
   "permissions": [
-    "https://bitbucket.org/*",
     "https://github.com/*",
     "storage"
   ],
